--- a/dgconstraint/vignette/evolve-resequence_dgconstraint.Rmd
+++ b/dgconstraint/vignette/evolve-resequence_dgconstraint.Rmd
@@ -12,11 +12,10 @@ library(grid)
 ```
 The `dgconstraint` package provides functions for calculating the constraint metrics described in the manuscript [Quantifying how constraints limit the diversity of viable routes to adaptation](https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1007717)
 
-## Guide  
-### Step 1: Setting up    
+# Step 1: Setting up    
 * Before you start the analysis, you need to ensure that:
   + Once you have found useful data it needs to be saved in .csv format. We recommend naming files `AuthorYear` but any file name without spaces or special characters is fine. 
-  + You have `data-in` and `data-out` folders in your working directory: `data-in` will contain the data to analyze (i.e., the .csv files), analysis will be written to the `data-out` folder
+  + You have `data_in` and `data_out` folders in your working directory: `data-in` will contain the data to analyze (i.e., the .csv files), analysis will be written to the `data-out` folder
   + Decide which function to use with your data:
     + `single_wide`: sequencing data was obtained from a single generation. Mutation presence/absence is in a separate column for each population. Population information is located in the column header.
     + `single_long`: sequencing data was obtained from a single generation. Mutation presence/absence is in a single column. Population information is indicated in a single, separate column.
@@ -24,14 +23,17 @@ The `dgconstraint` package provides functions for calculating the constraint met
     + `multiple_long`: sequencing data was obtained from multiple generations or treatments. Mutation presence/absence is in a single column. Generation/treatment is indicated in a single column. Population information is located in a single column.
   
 
-### Step 2: Organizing the wild data
+# Step 2: Organizing the data
 
-Not all of the data that you will come across will fit the function requirements. 
+Not all of the data that you will come across will fit the function requirements. Most of the time the format that a dataset has been published in will need to be manipulated at least a little bit to make the functions work.
 
-#### There must be a column labeled **Gene** in the data file
+### All datasets, regardless of which function you will use, require a column labelled **Gene**. 
+Some datasets record mutations at this level, while others record the specific mutation within a gene. The functiotns will automatically collapse all mutations within a gene for purpose of this analysis. 
 
-#### Mutation presence/absence must be indicated by 1/0
-The functions require that mutation presence and absence is recorded numerically by 1 (presence) or 0 (absence).
+### We only consider genic mutations
+A component of the analysis is to compare observed parallelism to possible parallelism. To do this we need to know how many different genes *could* be mutated. In our current functions we use the total number of genes for this. Since we don't know how many intergenic, chromosomal or tranposable element targets exist (or how to computationally consider them) for now we restrict our analysis to genic mutations. Hence non-genic mutations should be removed. Of course you are free to include these mutations as influencing the target gene if you have this information (i.e., a TE that disrupts a gene can be recorded as such and counted in the analysis). 
+
+### Mutation presence/absence must be indicated by 1/0
 
 Example 1: This following data set used X's to indicate mutation presence and the blank squares to indicate absence. 
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
@@ -39,207 +41,244 @@ knitr::include_graphics("figures/Sandberg_1.png")
 ```
 
 Example 2: Here coloured boxes were used to indicate mutation presence/absence. 
-  
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/Creamer.png")
 ```
-  
-#### Multiple clones from the same population need to be collapsed into one
 
-Not all data will be perfect to work with (in fact almost no data is perfect to work with), here is an example of a dataset that I had to manipulate in order to use the function.
+The functions require that mutation presence and absence is recorded numerically by 1 (presence) or 0 (absence). This can be done by hand, e.g., in excel, or programatically in R.
+
+### Multiple clones from the same population need to be collapsed into one
+The goal of this analysis is to examine parallelism among populations. Although of course it is great to have information at the within-population level, for our puposes we consider all mutations equal, regardless of their frequency within the population. Future versions of this analysis could be extended to consider mutation frequency. Hence, information about multiple clones will have to be collapsed into mutation information at the population level.
+
+Example1: This dataset sequenced multiple clones from the same population (e.g., *A1 F1 I1 R1* and *A1 F1 I2 R1*). From [*Wannier et al., 2018*](https://www-pnas-org.uml.idm.oclc.org/content/115/12/3090.short)
 
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/Wannier_1.png")
 ```
 
-This dataset is looking like the single generation matrix form, but when reading the paper it indicates that *A1 F1 I1 R1* and *A1 F1 I2 R1* are two clones from the same population. So we would want to combine those two columns as population *A1*, with a 0 when both clones have an *NA* and a 1 when either of the clones have a *1*. Here's what I did to obtain the preferred dataset.  
+Manipulated dataset:
 
-```{r, eval=FALSE}
-data<- data %>% transmutate(A1 = `A1 F1 I1 R1` + `A1 F1 I2 R1`, A2 = `A2 F1 I1 R1`+ `A2 F1 I2 R1`, A3 = `A3 F1 I1 R1`+ `A3 F1 I2 R1`, A4 = `A4 F1 I1 R1`+ `A4 F1 I2 R1`, A5 = `A5 F1 I1 R1`+ `A5 F1 I2 R1`, A6 = `A6 F1 I1 R1`+ `A6 F1 I2 R1`, A7 = `A7 F1 I1 R1`+ `A7 F1 I2 R1`, A8 = `A8 F1 I1 R1`+ `A8 F1 I2 R1`, A9 = `A9 F1 I1 R1`+ `A9 F1 I2 R1`, A10 = `A10 F1 I1 R1`+ `A10 F1 I2 R1`,A11 = `A1 F1 I1 R1`+ `A11 F1 I2 R1`, A12 = `A12 F1 I1 R1`+ `A12 F1 I2 R1`, A13 = `A13 F1 I1 R1`+ `A13 F1 I2 R1`, A14 = `A14 F1 I1 R1`+ `A14 F1 I2 R1`) %>% replace(is.na(.), 0)
-```
-
-I used the `transmute` function to combine both columns, then name them by their population name, A1, A2, and so on. I replaced the *NA* with 0 with replace(is.na(.), 0)) and now the dataset looks like this:  
+Example 2:  
+Here the column names contain a lot of information, including the population (e.g., A1), the generation (e.g., 500), clones (e.g., I1) and the number of replicates (e.g., R1). To get the data in the required form for the `multiple_wide` function, we need (1) a *Population* column, (2) to combine the clones within each population, (3) to change the column names to the different generations. From [*Tenaillon et al., 2016*](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4988878/)
 
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
-knitr::include_graphics("figures/Wannier_2.png")
+knitr::include_graphics("figures/Tenaillon_1.png")
 ```
 
-Now all that's left to do is to change the 2's to 1's. If we left them as 2's, the number of parallel genes would be off. To switch them to ones, I did the following:  
-```{r, echo=FALSE}
-print("data.matrix[data.matrix > 0]<-1")
+Manipulated dataset:
+```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+knitr::include_graphics("figures/Tenaillon_3.png")
 ```
+
+```{r, eval= FALSE, echo = FALSE}
+#This is under construction I htink as of April 24, 2019
+Here we provide a couple of examples for how you can programatically collapse within-population information:
+
+Example1: This dataset is sequenced multiple clones from the same population (e.g., *A1 F1 I1 R1* and *A1 F1 I2 R1*). From [*Wannier et al.*](https://www-pnas-org.uml.idm.oclc.org/content/115/12/3090.short)
+
+#```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+knitr::include_graphics("figures/Wannier_1.png")
+#```
+
+We combined those two columns as population *A1*, with 0 when both clones have an *NA* (= no mutation) and 1 when either of the clones have the mutation. 
+
+The first step is to replace all of the NA's with 0s then use transmute to add together information from different clones.
+
+#```{r, eval=FALSE}
+data_m <- data %>% 
+  replace(is.na(.), 0) %>% 
+  transmute(Gene= data$Gene, Details = data$Details, A1= `A1 F1 I1 R1`+ `A1 F1 I2 R1`, A2 = `A2 F1 I1 R1`+ `A2 F1 I2 R1`, A3 = `A3 F1 I1 R1`+ `A3 F1 I2 R1`, A4 = `A4 F1 I1 R1`+ `A4 F1 I2 R1`, A5 = `A5 F1 I1 R1`+ `A5 F1 I2 R1`, A6 = `A6 F1 I1 R1`+ `A6 F1 I2 R1`, A7 = `A7 F1 I1 R1`+ `A7 F1 I2 R1`, A8 = `A8 F1 I1 R1`+ `A8 F1 I2 R1`, A9 = `A9 F1 I1 R1`+ `A9 F1 I2 R1`, A10 = `A10 F1 I1 R1`+ `A10 F1 I2 R1`,A11 = `A1 F1 I1 R1`+ `A11 F1 I2 R1`, A12 = `A12 F1 I1 R1`+ `A12 F1 I2 R1`, A13 = `A13 F1 I1 R1`+ `A13 F1 I2 R1`, A14 = `A14 F1 I1 R1`+ `A14 F1 I2 R1`) %>% 
+  filter(Details != "intergenic") 
+#```
+
+This is the resulting intermediate dataset.
+
+#```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+knitr::include_graphics("figures/Wannier_2.png")
+#```
+
+Notice that it contains "2`s" in places where both clone had the mutation, so we change all mutations with a frequency above 0 to 1:
+ 
+#```{r, eval=FALSE}
+# specify the populations (column headers)
+population <-  paste0("A", 1:14)
+
+# create a matrix that only contains the poulation column
+data.matrix <- as.matrix(data[, population])
+
+#change anything with frequency above 0 to 1
+data.matrix[data.matrix > 0]<-1
+
+# add back the gene information as a column in the dataframe that will be used to run the constraint function
+AuthorYear <- cbind(as.data.frame(data.matrix), Gene = data$Gene)
+#```
 
 And the dataset now looks like this:  
 
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+#```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/Wannier_3.png")
-```
+#```
 
-The data is now in a way that we can use the function!  
-
-There are other ways to code the data to look the way we want. This is a basic way to do it, but other functions will work as well. You might have to do this for datasets of the other types of function, but it is all the same idea, refer to the types of functions below to see how the data should look like.    
-
-  
+Example 2:  
 Another example of setting up the data for analysis:  
 We can see that the column names give us a lot of information, the population(i.e A1), the generation(i.e 500), clones(i.e I1 and I2) and the number of replicates(i,e R1). To get the data to look like the form in the multiple generation function, we need a *Population* column, to combine the clones, and to change the column names to what we want the generations to be.    
 
 First I made a new column and called it *Population* and added the proper population to the data. In this case we have 6 populations, and so we will have A1 to A6.    
 i.e .,
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+#```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/Tenaillon_1.png")
-```
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+#```
+#```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/Tenaillon_2.png")
-```
+#```
 And now I have to combine both clones into one column and name that column `500`, for the 500th generation and change the NA's to 0.  
 
-```{r, echo=FALSE}
+#```{r, echo=FALSE}
 print("data <- data %>% transmute(Gene = data$Gene, Population = data$Population, Details = data$Details, `500` = `500 I1 R1`+`500 I2 R1`, `1000` = `1000 I1 R1`+`1000 I2 R1`, `1500` =`1500 I1 R1`+`1500 I2 R1`, `2000` = `2000 I1 R1`+`2000 I2 R1`, `5000` = `5000 I1 R1`+`5000 I2 R1`, `10000` = `10000 I1 R1`+`10000 I2 R1`, `15000` = `15000 I1 R1`+`15000 I2 R1`, `20000` = `20000 I1 R1`+`20000 I2 R1`, `30000` = `30000 I1 R1`+`30000 I2 R1`, `40000` = `40000 I1 R1`+`40000 I2 R1`, `50000` = `50000 I1 R1`+`50000 I2 R1`) %>% replace(is.na(.), 0)")
-```
+#```
 
 In this case it doesn't matter if the gene count in each column if off due to adding the columns together because we have a code in the function that changes any value greater then 0 to a 1. Ans so now the dataset will look like this:  
 
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+#```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center", eval = FALSE}
 knitr::include_graphics("figures/Tenaillon_3.png")
 ```
 
-### Step 4: Walk-Through
-By now you should have made your files, chosen a dataset you want to analysis and saved it as "Author2018" in he csv format, decided which of the following functions works best for that data set and checked to see if the data has the proper format.  
-And now you are ready to start analyzing your data!  
-I will use the multiple generations function as an example for the walk-through.  
+# Description of each function
 
-* *multiple_wide(paper, environment, species, generations)* is the function we are using:    
-  + set the parameter *paper* = "Author2018"  
-  + set the parameter *environment* to the environment used in the experiment, lets say "YPD"  
-  + set the parameter *species* to either Sac" or "Ecoli_K12" or "Ecoli_O157-H7", lets say "Sac".  
-  + set the parameter *generations* to the number of generations in the dataset in a vector format, lets say c("0", "100", "500", "1000", "1500")    
-  
-And so your function will look like this:  
-```{r, eval=FALSE}
-multiple_wide(paper = "Author2018", environment = "YPD", species = "Sac", generations = c("0", "100", "500", "1000", "1500"))  
-```
-
-Your function should be good to go!  
-
-After you ran your code the analysis will be saved into the data-out folder that you already created. It should be called *"Author2018_Analysis.csv"*. Since this is a multiple generation example, you will also have separate information for each generation, that will include the populations, genes and frequencies at that time point. It will also be saved in the data-out folder under the name "Author2018_g.csv", *g* being either 0, 100, 500, 1000 or 1500 for this example.  
-
-### Step 5: Solving Errors
-If you come across an error while running your function: 
-
-* Make sure you picked the right function for your data, the single generation functions will not work in the multiple generation function and vice versa. Sometimes it is hard to distinguish between the functions, check the data format below in the each of the sections to help choose which functions is best for your data.      
-* Double check that all the parameters are set properly and that they match the information in your data.      
-* Make sure the column names are correct, it is easy to forget to change a column name gene to the needed one *Gene*. The code is ran in a way that it will recognize *Gene* and not gene. Same goes for *Population*, *Frequency* and *Selective_pressure*.    
-* Lastly, if there is an error when it tries to calculate the c-hyper, that could be due to lack of parallelism, populations or genes in that generation/selective pressure. If you are unsure, take a look at the original data to see if it matches the conclusion of no parallelism.      
-  
-## Calculations for a Multiple Wide Dataset  
-This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the	estimates of the effective proportion of adaptive loci for a data set with multiple generations.
+## `single_wide`
+This is a wrapper function to calculate the pairwise C-score using the hypergeometric approach `c_hyper()`, a p-value for 'all lineages' contrast using chi-square `p_chisq()`, and an estimate of the effective proportion of adaptive loci `estimate()` for a data set.
 
 ### Data  
-The data must have more than one generation, a column called *Populations*, a column called *Gene*, and frequencies associated with the Gene, Population and generation. The data can have other columns as well, but as long as we have the main ones named above, then the function will work.      
-This data should be saved in the data-in folder that you created beforehand.
+The dataset should be a wide datset with a column for *Gene* and separate columns for each population. This data represents only one generation, typically the experimental end point.
 
-i.e.:
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
-knitr::include_graphics("figures/Lang_1.png")
-```
-
-Here we can see that the generations are 0, 140, 335, 415, 505, 585 and so on. All the numbers below the generations are the frequencies associated with the *Gene* in the *Population*.   
-e.g.: *Gene* UBX5 has a *Frequency* of 0.94 at *generation* 335 in the *Population* BYB1-B01.  
-
-Now we have to fill in the parameters in the function: 
-```{r, eval =FALSE}
-multigen_c_hyper(paper, environment, species, generations)
-```
-
-If we use the data above as an example, then the function would look like this:  
-*multiple_wide("Author2014", "YPD", "Sac", c("0", "140", "240", "335", "415", "505", "585", "665", "745", "825", "910", "1000"))*  
-
-### Results  
-The package will give you the results in a table with all the information and calculations such as the paper, environment, generations, c-hyper, p-value, estimate, number of populations, number of non parallel genes, number of parallel genes and a list of the parallel genes.  
-
-i.e:
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
-knitr::include_graphics("figures/Lang_2.png")
-```
-The analysis will be automatically saved into the data-out folder that you created beforehand.
-
-## Calculations for Multiple Long Dataset  
-This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the estimates of the effective proportion of adaptive loci for a data set with  multiple selective pressures.  
-
-### Data  
-The data must have more than one selective pressure, a column called *Populations*, a column 	called *Gene*, a column called *Frequency* and a column called *Selective_pressure*.    
-This data should be saved in the data-in folder that you created beforehand.  
-
-i.e:
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
-knitr::include_graphics("figures/Jerison_1.png")
-```
-Here we can see that the selective pressures are OT(Optimal Temperature) and HT(High Temperature).  
-ex: *Gene* AFI1 has a *Frequency* of 0.6666667 in the *Population* LK5-F08 with the *Selective_pressure* HT.  
-
-Now we have to fill in the parameters in the function: *multiple_long(paper, environment, species, selective_pressure)*  
-If we use the data above as an example, then the function would look like this:  
-*multiple_long("Author2017", "YPD", "Ecoli_K12", c("OT", "HT"))*   
-
-### Results  
-The package will give you the results in a table with all the information and calculations such as the paper, environment, selective_pressure, c-hyper, p-value, estimate, number of non parallel genes, number of parallel genes and a list of the parallel genes.    
-
-i.e:
-```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
-knitr::include_graphics("figures/Jerison_2.png")
-```
-The analysis will be automatically saved into the data-out folder that you created beforehand.  
-
-## Calculations for a Single Wide Dataset  
-This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the estimates of the effective proportion of adaptive loci for a data set with a single generation in a matrix form.   
-
-### Data  
-The data must be in a form of a matrix, with the *Population* occupying either the names of the columns or the rows, usually column, and the *Gene* occupying the names of the columns or rows, which ever is not occupied by the Population. Each row and column will be filled with frequencies associated to a Gene in the Population.    
-This data should be saved in the data-in folder that you created beforehand.  
-
-i.e:
+e.g.,:
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/Sandberg_2.png")
 ```
-Here we can see that we have the *Population* as the column names, (ALE1, ALE2, ALE3, ALE4, ALE5, ALE6, ALE7, ALE8, ALE9 and ALE10), and the *Gene* as the row names. This data represents only one generation, usually the end point, and thus indicates a 1 if the *Gene* was present, and a 0 if the *Gene* was absent.    
-ex: The *Gene* cbpA was only present in the *Population* ALE2 at this time point.  
+Here you can see that the gene *cbpA* was only present in the population ALE2.
 
-Now we have to fill in the parameters in the function: *single_wide(paper, environment, species, population)*
-If we use the data above as an example, then the function would look like this:  
-*single_wide("Author2014", "glucose minimal media", "Ecoli_K12", c("ALE1", "ALE2", "ALE3", "ALE4", "ALE5", "ALE6", "ALE7", "ALE8", "ALE9", "ALE10"))*  
+Example useage:
+
+```{r, eval=FALSE}
+single_wide("Sanderg2014", c("ALE1", "ALE2", "ALE3", "ALE4", "ALE5", "ALE6", "ALE7", "ALE8", "ALE9", "ALE10"), "glucose minimal media", "Ecoli_K12")  
+```
 
 ### Results  
-The package will give you the results in a table with all the information and calculations such as the paper, environment, c-hyper, p-value, estimate, number of non parallel genes, number of parallel genes and a list of the parallel genes.  
+The function will give you the results in a table containing the paper name, the environment, c-hyper, the p-value (in practice this isn't typically very informative), the estimate, the number of non-parallel genes, the number of parallel genes, and a list of the parallel genes.  
 
-i.e:
+e.g., For the paper by [*Sanderg et al., 2014*](https://academic.oup.com/mbe/article/31/10/2647/1011712)
+
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/Sandberg_3.png")
 ```
-The analysis will be automatically saved into the data-out folder that you created beforehand.  
 
-## Calculations for a Single Long Dataset  
-This function allows you to calculate the pairwise C-score using the hypergeometric approach, a p-value for 'all lineages' contrast using chi-square, and the estimates of the effective proportion of adaptive loci for a data set with a single generation.
+## `single_long`
+This is a wrapper function to calculate the pairwise C-score using the hypergeometric approach `c_hyper()`, a p-value for 'all lineages' contrast using chi-square `p_chisq()`, and an estimate of the effective proportion of adaptive loci `estimate()` for a data set.
 
 ### Data  
-The data must have a column called *Population*, a column 	called *Gene*, and a column *Frequency*. The data can have other columns as well, but as long as we have the main ones named above, the function will work.      
-This data should be saved in the data-in folder that you created beforehand.
+The dataset should be a long dataset with a column for *Gene* a single column specifying the *Population* and column that indicates mutation presence or absence (*Frequency*).
+
+e.g., For the paper by [*McCloskey et al., 2018*](https://www-nature-com.uml.idm.oclc.org/articles/s41467-018-06219-9)
 
 i.e:
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/McCloskey_1.png")
 ```
-Here we can see that we have a *Population* column, a *Gene* column and a *Frequency* column.  
-ex: The *Gene* araA in the *Population* Evo04ptsHIcrrEvo03EP has a *Frequency* of 0.738 at this time point.  
 
-Now we have to fill in the parameters in the function: *single_long(paper, environment, species)*  
-If we use the data above as an example, then the function would look like this:  
-*single_long("Author2018", "YPD", "Ecoli_K12")*  
+Example useage:
+```{r, eval =FALSE}
+single_long("McCloskey2018", "Ecoli_K12", "YPD")
+```
 
 ### Results  
-The package will give you the results in a table with all the information and calculations such as the paper, environment, c-hyper, p-value, estimate, number of non parallel genes, number of parallel genes and a list of the parallel genes.  
+
+The function will give you the results in a table containing the paper name, the environment, c-hyper, the p-value (in practice this isn't typically very informative), the estimate, the number of non-parallel genes, the number of parallel genes, and a list of the parallel genes.  
 
 i.e:
 ```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
 knitr::include_graphics("figures/McCloskey_2.png")
 ```
-The analysis will be automatically saved into the data-out folder that you created beforehand.  
+
+## `multiple_wide`
+This is a wrapper function to calculate the pairwise C-score using the hypergeometric approach `c_hyper()`, a p-value for 'all lineages' contrast using chi-square `p_chisq()`, and an estimate of the effective proportion of adaptive loci `estimate()` for a data set that contains multiple generations or treatments in separate columnns.
+
+### Data  
+The dataset should contain with the columns *Gene* and *Population*. Additional columns that specify the multiple generations or treatments indicates mutation presence or absence.
+
+e.g., For the paper by [*Lang et al., 2013*](https://www-nature-com.uml.idm.oclc.org/articles/nature12344)
+```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+knitr::include_graphics("figures/Lang_1.png")
+```
+
+Here you can see that the gene *UBX5* has a frequency of 0.94 at generation 335 in the population BYB1-B01.  
+
+Example useage:
+
+```{r, eval =FALSE}
+multiple_wide("Lang2013", "YPD", "Sac", c("0", "140", "240", "335", "415", "505", "585", "665", "745", "825", "910", "1000"))
+```
+
+
+### Results  
+The function will give you the results in a multi-row table containing the paper name, the environment, the generations, c-hyper, the p-value (in practice this isn’t typically very informative), the estimate, the number of non-parallel genes, the number of parallel genes, and a list of the parallel genes.
+
+e.g.,
+```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+knitr::include_graphics("figures/Lang_2.png")
+```
+
+## Calculations for Multiple Long Dataset  
+This is a wrapper function to calculate the pairwise C-score using the hypergeometric approach `c_hyper()`, a p-value for 'all lineages' contrast using chi-square `p_chisq()`, and an estimate of the effective proportion of adaptive loci `estimate()` for a data set that contains multiple generations or treatments recorded in a single columnn.
+
+### Data  
+The dataset should contain the columns *Gene*, *Population*, *Frequency* and *Selective_pressure*.
+
+e.g., For the paper by [*Jerison et al., 2017*](https://elifesciences.org/articles/27167)
+```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+knitr::include_graphics("figures/Jerison_1.png")
+```
+Here we can see that the selective pressures are OT (Optimal Temperature) and HT (High Temperature). Gene *AFI1* has a frequency of 0.6666667 in the population LK5-F08 with the Selective_pressure HT.  
+
+Example useage:
+
+```{r, eval =FALSE}
+multiple_long("Jerison2017", "YPD", "Ecoli_K12", c("OT", "HT"))
+```
+
+### Results  
+The function will give you the results in a multi-row table containing the paper name, the environment, the selective pressure (or generations), c-hyper, the p-value (in practice this isn’t typically very informative), the estimate, the number of non-parallel genes, the number of parallel genes, and a list of the parallel genes.
+
+i.e:
+```{r, echo=FALSE, out.width = '75%', fig.pos = "H", fig.align="center"}
+knitr::include_graphics("figures/Jerison_2.png")
+```
+
+# Step 4: Walk-Through
+Once your data is in the proper format you are ready to analyze your data!  
+
+Here we will use the `multiple_wide` function as an example.  
+
+The function call is
+```{r, eval = FALSE}
+multiple_wide(paper, generations, environment, species)
+```
+
+  + set the parameter `paper` = "Author2019"  
+  + set the parameter *generations* to the number of generations in the dataset in a vector format, lets say c("0", "100", "500", "1000", "1500")    
+  + set the parameter `environment` to the base environment used in the experiment, e.g., "YPD" (this will be recorded in the meta data)
+  + set the parameter `species`. This is used to spepcify the number of genes in the genome. We have built-in information for *Saccharomyces cerevisiae* `species = "Sac"` and  *Escherichia coli* either `species =  "Ecoli_K12"` or `species = "Ecoli_O157-H7"`. If you are working with a different organism you can leave this blank and you will be prompted to enter the number of genes
+    
+In  this case your function will look like:  
+```{r, eval=FALSE}
+multiple_wide(paper = "Author2018", generations = c("0", "100", "500", "1000", "1500"), environment = "YPD", species = "Sac")  
+```
+
+After the function is run the resulting analysis will be saved into the data_out folder that you already created. It will be called *Author2018_Analysis.csv*. Since this is a multiple generation example, you will also have separate files for each generation; each will include the populations, genes and frequencies at that time point. It will also be saved in the data_out folder under the name *Author2018_g.csv*. In this case there will be five different files, one for each generation [0, 100, 500, 1000, 1500].
+
+# Step 5: Solving Errors
+If you come across an error while running your function: 
+
+* Make sure you picked the right function for your data. 
+* Double check that all the parameters are set properly and that they match the information in your dataset.      
+* Make sure the column names are correct, it is easy to forget to change a column name gene to the needed one *Gene*. The code is ran in a way that it will recognize *Gene* and not gene. Same goes for *Population*, *Frequency* and *Selective_pressure*.    
+* Lastly, if there is an error when it tries to calculate the c-hyper, that could occur if there is no parallelism in a given generation or selective pressure. When in doubt, take a look at the original data to see if this is the case.
